syntax = "proto3";

package authentication;

service AuthenticationService {
    rpc getUsersByIds(GetUsersByIdArgs) returns (Users) {}
    rpc getUserById(GetUserByArgs) returns (User) {}
}

message GetUserByArgs {
    string user_id = 1;
}

message GetUsersByIdArgs {
    repeated string user_ids = 1;
}

message Users {
    repeated User users = 1;
}

message User {
    string id = 1;
    string username = 2;
    string email = 3;
    repeated User blockedUsers = 4;
    bool confirmed = 5;
    bool online = 6;
}
